@@ -1,9 +1,13 @@
 package com.dotmarketing.util;
 
+import static com.dotmarketing.portlets.contentlet.model.Contentlet.IDENTIFIER_KEY;
+import static com.dotmarketing.portlets.contentlet.model.Contentlet.STRUCTURE_INODE_KEY;
 import static com.dotmarketing.util.importer.HeaderValidationCodes.HEADERS_NOT_FOUND;
 import static com.dotmarketing.util.importer.ImportLineValidationCodes.LANGUAGE_NOT_FOUND;
+import static com.liferay.util.StringPool.FORWARD_SLASH;
 
 import com.dotcms.content.elasticsearch.util.ESUtils;
+import com.dotcms.contenttype.business.ContentTypeAPI;
 import com.dotcms.contenttype.model.field.BinaryField;
 import com.dotcms.contenttype.model.field.HostFolderField;
 import com.dotcms.contenttype.model.type.BaseContentType;
@@ -12,13 +16,13 @@ import com.dotcms.contenttype.transform.contenttype.StructureTransformer;
 import com.dotcms.contenttype.transform.field.LegacyFieldTransformer;
 import com.dotcms.repackage.com.csvreader.CsvReader;
 import com.dotcms.rest.api.v1.temp.DotTempFile;
+import com.dotcms.rest.api.v1.temp.TempFileAPI;
 import com.dotcms.util.LowerKeyMap;
 import com.dotcms.util.RelationshipUtil;
 import com.dotmarketing.beans.Host;
 import com.dotmarketing.beans.Identifier;
 import com.dotmarketing.beans.Permission;
 import com.dotmarketing.business.APILocator;
-import com.dotmarketing.business.CacheLocator;
 import com.dotmarketing.business.DotValidationException;
 import com.dotmarketing.business.PermissionAPI;
 import com.dotmarketing.cache.FieldsCache;
@@ -33,12 +37,15 @@ import com.dotmarketing.portlets.categories.business.CategoryAPI;
 import com.dotmarketing.portlets.categories.model.Category;
 import com.dotmarketing.portlets.contentlet.action.ImportAuditUtil;
 import com.dotmarketing.portlets.contentlet.business.ContentletAPI;
+import com.dotmarketing.portlets.contentlet.business.DotJsonFieldException;
 import com.dotmarketing.portlets.contentlet.business.DotContentletStateException;
 import com.dotmarketing.portlets.contentlet.business.DotContentletValidationException;
 import com.dotmarketing.portlets.contentlet.business.HostAPI;
 import com.dotmarketing.portlets.contentlet.model.Contentlet;
 import com.dotmarketing.portlets.contentlet.model.ContentletDependencies;
 import com.dotmarketing.portlets.contentlet.model.IndexPolicy;
+import com.dotmarketing.portlets.fileassets.business.FileAsset;
+import com.dotmarketing.portlets.fileassets.business.FileAssetAPI;
 import com.dotmarketing.portlets.folders.business.FolderAPI;
 import com.dotmarketing.portlets.folders.model.Folder;
 import com.dotmarketing.portlets.htmlpageasset.business.HTMLPageAssetAPI;
@@ -83,9 +90,11 @@ import com.liferay.portal.language.LanguageUtil;
 import com.liferay.portal.model.User;
 import com.liferay.util.StringPool;
 import io.vavr.Lazy;
+import io.vavr.control.Try;
 import java.io.File;
 import java.io.IOException;
 import java.io.Reader;
+import java.net.URI;
 import java.net.URL;
 import java.sql.Savepoint;
 import java.sql.Timestamp;
@@ -103,6 +112,8 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
@@ -126,13 +137,16 @@ import org.apache.commons.lang3.tuple.Pair;
  */
 public class ImportUtil {
 
-    private static PermissionAPI permissionAPI = APILocator.getPermissionAPI();
-    private final static ContentletAPI conAPI = APILocator.getContentletAPI();
-    private final static CategoryAPI catAPI = APILocator.getCategoryAPI();
-    private final static LanguageAPI langAPI = APILocator.getLanguageAPI();
-    private final static HostAPI hostAPI = APILocator.getHostAPI();
-    private final static FolderAPI folderAPI = APILocator.getFolderAPI();
-    private final static WorkflowAPI workflowAPI = APILocator.getWorkflowAPI();
+    private static final PermissionAPI permissionAPI = APILocator.getPermissionAPI();
+    private static final ContentletAPI conAPI = APILocator.getContentletAPI();
+    private static final CategoryAPI catAPI = APILocator.getCategoryAPI();
+    private static final LanguageAPI langAPI = APILocator.getLanguageAPI();
+    private static final HostAPI hostAPI = APILocator.getHostAPI();
+    private static final FolderAPI folderAPI = APILocator.getFolderAPI();
+    private static final WorkflowAPI workflowAPI = APILocator.getWorkflowAPI();
+    private static final ContentTypeAPI contentTypeAPI = APILocator.getContentTypeAPI(APILocator.systemUser());
+    private static final FileAssetAPI fileAssetAPI = APILocator.getFileAssetAPI();
+    private static final TempFileAPI tempFileAPI = APILocator.getTempFileAPI();
 
     public static final String KEY_WARNINGS = "warnings";
     public static final String KEY_ERRORS = "errors";
@@ -163,6 +177,10 @@ public class ImportUtil {
     private static final String DATE_FIELD_FORMAT_PATTERN = "yyyyMMdd";
     private static final String DATE_TIME_FIELD_FORMAT_PATTERN = "MM/dd/yyyy";
     private static final String TIME_FIELD_FORMAT_PATTERN = "HHmmss";
+
+    private ImportUtil() {
+        // Prevent instantiation
+    }
 
     /**
      * Imports the data contained in a CSV file into dotCMS. The data can be
@@ -293,8 +311,12 @@ public class ImportUtil {
     public static ImportResult importFileResult(final ImportFileParams params)
             throws DotRuntimeException, DotDataException {
 
-        Structure contentType = CacheLocator.getContentTypeCache()
-                .getStructureByInode(params.contentTypeInode());
+        final ContentType type = Try.of(()->contentTypeAPI.find(params.contentTypeInode())).getOrNull();
+        if (type == null) {
+            throw new DotDataValidationException("Content type not found for inode: " + params.contentTypeInode());
+        }
+        Structure contentType = new StructureTransformer(type).asStructure();
+
         List<Permission> contentTypePermissions = permissionAPI.getPermissions(contentType);
         List<UniqueFieldBean> uniqueFieldBeans = new ArrayList<>();
 
@@ -492,6 +514,7 @@ public class ImportUtil {
 
                             // Stop on first error if configured
                             if (params.stopOnError()) {
+                                Logger.info(ImportUtil.class, "Per given configuration the Import process Stopped on Error at line " + lineNumber);
                                 break;
                             }
 
@@ -571,12 +594,7 @@ public class ImportUtil {
     /**
      * Generates an import result from the provided input parameters after processing and analyzing
      * the file data and performing the necessary content operations.
-     *
-     * @param preview         a boolean flag indicating whether the operation is a preview or an
-     *                        actual import
-     * @param wfActionId      a string representing the workflow action ID associated with the
-     *                        import operation
-     * @param fileTotalLines  the total number of lines in the file being processed
+     * @param params         the parameters containing details about the import operation,
      * @param lineNumber      the number of lines successfully processed
      * @param failedRows      the number of rows that encountered errors during processing
      * @param messages        a list of validation messages containing information, warnings, or
@@ -771,7 +789,7 @@ public class ImportUtil {
     private static void handleException(Exception ex, int lineNumber,
             List<ValidationMessage> messages) {
 
-        ValidationMessage.Builder messageBuilder = ValidationMessage.builder()
+        final ValidationMessage.Builder messageBuilder = ValidationMessage.builder()
                 .type(ValidationMessageType.ERROR)
                 .lineNumber(lineNumber);
 
@@ -782,6 +800,14 @@ public class ImportUtil {
                     .field(validationMessageException.getField())
                     .invalidValue(validationMessageException.getInvalidValue())
                     .context(validationMessageException.getContext());
+        }
+        if (ex instanceof DotJsonFieldException) {
+            final var jsonFieldException = (DotJsonFieldException) ex;
+            messageBuilder
+                    .code(ImportLineValidationCodes.INVALID_JSON.name())
+                    .field(jsonFieldException.getField())
+                    .invalidValue(jsonFieldException.getInvalidJson())
+                    .context(jsonFieldException.getContext());
         }
 
         messageBuilder.message(ex.getMessage());
@@ -1657,7 +1683,7 @@ public class ImportUtil {
         validateLineLength(line, headers, lineNumber);
 
         // Process fields and collect values
-        final var fieldResults = processFields(
+        final FieldsProcessingResult fieldResults = processFields(
                 line, headers, contentType, user, currentHostId, language, lineNumber
         );
 
@@ -1665,10 +1691,8 @@ public class ImportUtil {
         fieldResults.categories().forEach(resultBuilder::addCategory);
         uniqueFieldBeans.addAll(fieldResults.uniqueFields());
 
-        final Map<Integer, Object> values = new HashMap<>();
-        final Set<Category> categories = new HashSet<>();
-        values.putAll(fieldResults.values());
-        categories.addAll(fieldResults.categories());
+        final Map<Integer, Object> values = new HashMap<>(fieldResults.values());
+        final Set<Category> categories = new HashSet<>(fieldResults.categories());
 
         if (fieldResults.ignoreLine()) {
             resultBuilder.setIgnoreLine(true);
@@ -1806,8 +1830,8 @@ public class ImportUtil {
                 }
             }
         }
-
-        ProcessedContentResult processResult = processContent(
+         //Here we save the contentlet(s) and process the results
+        final ProcessedContentResult processResult = processContent(
                 lineNumber,
                 contentlets,
                 resultBuilder.isNewContent(),
@@ -1825,6 +1849,7 @@ public class ImportUtil {
                 contentTypePermissions,
                 wfActionIdIndex,
                 preview,
+                currentHostId,
                 user,
                 request,
                 line
@@ -1903,8 +1928,8 @@ public class ImportUtil {
 
         for (Integer column : headers.keySet()) {
 
-            Field field = headers.get(column);
-            String value = line[column];
+            final Field field = headers.get(column);
+            final String value = line[column];
 
             try {
                 final var fieldResult = processField(field, value, user, currentHostId,
@@ -1931,21 +1956,8 @@ public class ImportUtil {
                 fieldResult.messages().forEach(results::addValidationMessage);
 
             } catch (Exception e) {
-
-                if (e instanceof ImportLineException) {
-                    results.addValidationMessage(((ImportLineException) e).toValidationMessage());
-                } else {
-
-                    var exceptionMessage = e.getMessage();
-                    if (!UtilMethods.isSet(exceptionMessage)) {
-                        exceptionMessage = e.toString();
-                    }
-
-                    results.addError(exceptionMessage, field.getVelocityVarName(), value);
-                }
-
-                results.setIgnoreLine(true);
-                return results.build();
+                Logger.debug(ImportUtil.class, "Error processing field, line number: " + lineNumber, e);
+                throw e;
             }
         }
 
@@ -2028,23 +2040,25 @@ public class ImportUtil {
         if (isDateField(field)) {
             processedValue = validateDateTypes(field, value, value);
         } else if (isCategoryField(field)) {
-            Set<Category> categories = processCategoryField(field, value, user, results);
+            Set<Category> categories = validateCategoryField(field, value, user, results);
             processedValue = categories;
             results.addCategories(categories);
         } else if (isSelectionField(field)) {
-            processedValue = processSelectionField(field, value);
+            processedValue = validateSelectionField(field, value);
         } else if (isTextField(field)) {
-            processedValue = processTextField(value);
+            processedValue = validateTextField(value);
         } else if (isTextAreaField(field)) {
             processedValue = value;
         } else if (isLocationField(field)) {
-            Pair<Host, Folder> location = processLocationField(field, value, user);
+            Pair<Host, Folder> location = validateLocationField(field, value, user);
             processedValue = value;
             results.setSiteAndFolder(location);
         } else if (isBinaryField(field)) {
-            processedValue = processBinaryField(value);
+            //Binaries are loaded from an external source
+            processedValue = validateBinaryField(field, value);
         } else if (isFileField(field)) {
-            processedValue = processFileField(field, value, currentHostId, user, results);
+            // Files fields are images or file fields, they can be loaded from an external source or referenced by an internal path
+            processedValue = validateFileField(field, value, currentHostId, user);
         } else {
             processedValue = processDefaultField(value);
         }
@@ -2202,7 +2216,13 @@ public class ImportUtil {
      * Processes a category field from a CSV line.
      * <p>
      * This method validates and processes the category field, converting the comma-separated
-     * category keys into a set of Category objects. If any category key is invalid, an error is
+     * category keys into a set of Category objects.
+     * Each category must:
+     * <ul>
+     *   <li>Exist in the system</li>
+     *   <li>Be a descendant of the configured root category (i.e. within the allowed hierarchy)</li>
+     * </ul>
+     * If any category key is invalid, an error is
      * added to the resultBuilder and a DotRuntimeException is thrown.
      *
      * @param field         the field definition containing type and validation rules
@@ -2213,27 +2233,104 @@ public class ImportUtil {
      * @throws DotDataException     if a data access error occurs during processing
      * @throws DotSecurityException if a security violation occurs during processing
      */
-    private static Set<Category> processCategoryField(final Field field, final String value,
-            final User user, final FieldProcessingResultBuilder resultBuilder
+    private static Set<Category> validateCategoryField(
+            final Field field,
+            final String value,
+            final User user,
+            final FieldProcessingResultBuilder resultBuilder
     ) throws DotDataException, DotSecurityException {
+
         Set<Category> categories = new HashSet<>();
-        if (UtilMethods.isSet(value)) {
-            String[] categoryKeys = value.split(",");
-            for (String catKey : categoryKeys) {
-                Category cat = catAPI.findByKey(catKey.trim(), user, false);
-                if (cat == null) {
-                    throw ImportLineException.builder()
-                            .message("Invalid category key found")
-                            .code(ImportLineValidationCodes.INVALID_CATEGORY_KEY.name())
-                            .field(field.getVelocityVarName())
-                            .invalidValue(value)
-                            .build();
-                }
-                categories.add(cat);
-                resultBuilder.addCategory(cat);
-            }
+        if (!UtilMethods.isSet(value)) {
+            return categories;
         }
+
+        final Category configuredRootCategory = findConfiguredRootCategory(field, user);
+
+        // Defensive check — should not normally occur
+        if (configuredRootCategory == null) {
+            throw ImportLineException.builder()
+                    .message(String.format(
+                            "Root category configured for field '%s' could not be found. Please check the field configuration.",
+                            field.getVelocityVarName()
+                    ))
+                    .code(ImportLineValidationCodes.INVALID_CATEGORY_KEY.name())
+                    .field(field.getVelocityVarName())
+                    .invalidValue(value)
+                    .build();
+        }
+
+        String[] categoryKeys = value.split(",");
+        for (String catKey : categoryKeys) {
+            String key = catKey.trim();
+            Category cat = validateCategoryKey(key, configuredRootCategory, field, user);
+            categories.add(cat);
+            resultBuilder.addCategory(cat);
+        }
+
         return categories;
+    }
+
+
+    /**
+     * Given a field previously determined to be of type Category, this method retrieves
+     * the configured root category associated with that field.
+     * <p>
+     * The root category defines the top-level constraint under which all assigned
+     * categories must reside. If no such category is found, the method returns null.
+     *
+     * @param categoryField the field whose associated root category is to be retrieved
+     * @param user          the user performing the operation (for permission checks)
+     * @return the configured root Category for the field, or null if not found or inaccessible
+     */
+    private static Category findConfiguredRootCategory(final Field categoryField, final User user) {
+        Category category = null;
+        try {
+            category = catAPI.find(categoryField.getValues(), user, false);
+        } catch (final DotSecurityException | DotDataException e) {
+            Logger.error(ImportUtil.class, String.format(
+                    "User '%s' couldn't get the configured root Category from field '%s': %s",
+                    user != null ? user.getUserId() : null,
+                    categoryField.getCategoryId(),
+                    e.getMessage()), e);
+        }
+        return category;
+    }
+
+
+    /**
+     * Validates a single category key against the configured root category for a field.
+     * <p>
+     * This method ensures that:
+     * <ul>
+     *   <li>The category identified by the given key exists in the system</li>
+     *   <li>The category is a descendant (child, grandchild, etc.) of the specified root category</li>
+     * </ul>
+     * If the key is invalid, an {@link ImportLineException} is thrown with context for debugging.
+     *
+     * @param key           the raw category key to validate
+     * @param rootCategory  the root category that all valid categories must descend from
+     * @param field         the field definition this key is associated with (used for error reporting)
+     * @param user          the user performing the operation (used for permission checks)
+     * @return the valid {@link Category} object corresponding to the key
+     * @throws DotDataException     if a data access error occurs
+     * @throws DotSecurityException if a security or permission error occurs
+     * @throws ImportLineException  if the category does not exist or is not under the root category
+     */
+    private static Category validateCategoryKey(final String key, final Category rootCategory, final Field field, final User user) throws DotDataException, DotSecurityException {
+        Category cat = catAPI.findByKey(key, user, false);
+        if (cat == null || !catAPI.isParent(cat, rootCategory, user)) {
+            throw ImportLineException.builder()
+                    .message(String.format(
+                            "Invalid category key found: '%s'. It must exist and be a child of '%s'.",
+                            key, rootCategory.getCategoryName()
+                    ))
+                    .code(ImportLineValidationCodes.INVALID_CATEGORY_KEY.name())
+                    .field(field.getVelocityVarName())
+                    .invalidValue(key)
+                    .build();
+        }
+        return cat;
     }
 
     /**
@@ -2242,7 +2339,7 @@ public class ImportUtil {
      * @param value the value to process
      * @return the processed value, truncated to 255 characters if necessary
      */
-    private static Object processTextField(final String value) {
+    private static Object validateTextField(final String value) {
         if (value != null && value.length() > TEXT_FIELD_MAX_LENGTH) {
             return value.substring(0, TEXT_FIELD_MAX_LENGTH);
         }
@@ -2260,7 +2357,7 @@ public class ImportUtil {
      * @throws DotDataException     if a data access error occurs during processing
      * @throws DotSecurityException if a security violation occurs during processing
      */
-    private static Pair<Host, Folder> processLocationField(final Field field, final String value,
+    private static Pair<Host, Folder> validateLocationField(final Field field, final String value,
             final User user) throws DotDataException, DotSecurityException {
 
         Pair<Host, Folder> siteAndFolder = getSiteAndFolderFromIdOrName(value, user);
@@ -2283,11 +2380,27 @@ public class ImportUtil {
      * @return the processed value if the URL is valid
      * @throws ImportLineException if the URL is invalid
      */
-    private static Object processBinaryField(final String value) {
-        if (UtilMethods.isSet(value) && !APILocator.getTempFileAPI().validUrl(value)) {
+    private static Object validateBinaryField(final Field field, final String value) {
+        if (UtilMethods.isNotSet(value)) {
+            // If the value is not set return as REQUIRED_FIELD_MISSING is handled by contentlet checkin
+            return value;
+        }
+        //Here we need to throw an exception if the value is not set and the value is required
+        final boolean validURL = UtilMethods.isValidStrictURL(value);
+        if(!validURL) {
+            // If the value is not a valid URL, we throw an exception
             throw ImportLineException.builder()
-                    .message("URL is malformed or Response is not 200")
+                    .message("The provided value is not a syntactically valid URL")
                     .code(ImportLineValidationCodes.INVALID_BINARY_URL.name())
+                    .field(field.getVelocityVarName())
+                    .invalidValue(value)
+                    .build();
+        }
+        if (UtilMethods.isSet(value) && !tempFileAPI.validUrl(value)) {
+            throw ImportLineException.builder()
+                    .message("URL is syntactically valid but returned a non-success HTTP response")
+                    .code(ImportLineValidationCodes.UNREACHABLE_URL_CONTENT.name())
+                    .field(field.getVelocityVarName())
                     .invalidValue(value)
                     .build();
         }
@@ -2301,26 +2414,71 @@ public class ImportUtil {
      * @param value         the raw value from the CSV line
      * @param currentHostId the ID of the current host
      * @param user          the user performing the import
-     * @param resultBuilder the builder to accumulate validation messages and results
      * @return the contentlet identifier if the file is valid, null otherwise
      * @throws DotDataException     if a data access error occurs during processing
      * @throws DotSecurityException if a security violation occurs during processing
      */
-    private static Object processFileField(final Field field, final String value,
-            final String currentHostId, final User user,
-            final FieldProcessingResultBuilder resultBuilder
+    private static Object validateFileField(final Field field, final String value,
+            final String currentHostId, final User user
     ) throws DotDataException, DotSecurityException {
-        String filePath = value;
-        if (Field.FieldType.IMAGE.toString().equals(field.getFieldType()) && !UtilMethods.isImage(
-                filePath)) {
-            if (UtilMethods.isSet(filePath)) {
-                resultBuilder.addWarning(String.format(
-                                "The file is not an image for field: %s", field.getVelocityVarName()),
-                        ImportLineValidationCodes.INVALID_IMAGE_TYPE.name());
-            }
-            return null;
+        if(UtilMethods.isNotSet(value)) {
+            // If the value is not set return as REQUIRED_FIELD_MISSING is handled by contentlet checkin
+           return value;
         }
+        //Here we need to determine if the value is a valid internal file path or an external URL
+        final boolean dotCMSPath = UtilMethods.isValidDotCMSPath(value);
+        if (dotCMSPath) {
+            final Optional<String> internal = matchWithInternalIdentifier(value, currentHostId, user);
+            if (internal.isPresent()) {
+                // We found a matching object
+                return internal.get();
+            } else {
+               //Throw validation error as failed to match the given path with an internal object
+                throw ImportLineException.builder()
+                        .message("Unable to match the given path with a file stored in dotCMS")
+                        .code(ImportLineValidationCodes.INVALID_FILE_PATH.name())
+                        .field(field.getVelocityVarName())
+                        .invalidValue(value)
+                        .build();
+            }
+        } else {
+            final boolean validURL = UtilMethods.isValidStrictURL(value);
+            if(!validURL) {
+                // If the value is not a valid URL, we throw an exception
+                throw ImportLineException.builder()
+                        .message("The provided value is not a syntactically valid URL nor a valid dotCMS path")
+                        .code(ImportLineValidationCodes.INVALID_BINARY_URL.name())
+                        .field(field.getVelocityVarName())
+                        .invalidValue(value)
+                        .build();
+            }
+            // If it's a URL, we need to validate if we can access it
+            if (!tempFileAPI.validUrl(value)) {
+                throw ImportLineException.builder()
+                        .message("URL is syntactically valid but returned a non-success HTTP response")
+                        .code(ImportLineValidationCodes.UNREACHABLE_URL_CONTENT.name())
+                        .field(field.getVelocityVarName())
+                        .invalidValue(value)
+                        .build();
+            }
 
+            // if the URL is valid, we can return it as is
+            return value;
+        }
+    }
+
+    /**
+     * Matches a given value with an internal identifier.
+     * @param value the value to match, which can be a file path or URL
+     * @param currentHostId the ID of the current host
+     * @param user the user performing the import
+     * @return an Optional containing the contentlet identifier if a match is found,
+     * @throws DotDataException if a data access error occurs during processing
+     * @throws DotSecurityException if a security violation occurs during processing
+     */
+    private static Optional<String> matchWithInternalIdentifier(final String value, final String currentHostId, final User user) throws DotDataException, DotSecurityException {
+        //Here we need to determine if the value is a valid file path or URL
+        String filePath = value;
         Host fileHost = hostAPI.find(currentHostId, user, false);
         if (filePath.contains(StringPool.COLON)) {
             String[] fileInfo = filePath.split(StringPool.COLON);
@@ -2338,23 +2496,18 @@ public class ImportUtil {
                             APILocator.getLanguageAPI().getDefaultLanguage().getId(),
                             user, false);
             if (cont != null && InodeUtils.isSet(cont.getInode())) {
-                return cont.getIdentifier();
+                return Optional.of(cont.getIdentifier());
             }
-            resultBuilder.addWarning(String.format(
-                            "The file has not been found in %s:%s",
-                            fileHost.getHostname(), filePath
-                    ), ImportLineValidationCodes.FILE_NOT_FOUND.name()
-            );
         }
-        return null;
+        return Optional.empty();
     }
 
-    /**
-     * Processes a default field by escaping HTML text if necessary.
-     *
-     * @param value the value to process
-     * @return the processed value, with HTML text escaped if necessary
-     */
+        /**
+         * Processes a default field by escaping HTML text if necessary.
+         *
+         * @param value the value to process
+         * @return the processed value, with HTML text escaped if necessary
+         */
     private static Object processDefaultField(final String value) {
         return Config.getBooleanProperty("CONTENT_ESCAPE_HTML_TEXT", true) ?
                 UtilMethods.escapeUnicodeCharsForHTML(value) : value;
@@ -2421,14 +2574,14 @@ public class ImportUtil {
      * @implNote For checkbox fields, returns Boolean.TRUE if value contains "true", "yes" or "1",
      *           Boolean.FALSE otherwise. Other field types return null for unmatched values
      */
-    private static Object processSelectionField(final Field field, final String value) {
+    private static Object validateSelectionField(final Field field, final String value) {
         if (UtilMethods.isSet(value)) {
             String fieldEntriesString = field.getValues() != null ? field.getValues() : "";
             String[] fieldEntries = fieldEntriesString.split("\n");
 
             for (String fieldEntry : fieldEntries) {
-                String[] splittedValue = fieldEntry.split("\\|");
-                String entryValue = splittedValue[splittedValue.length - 1].trim();
+                String[] splitValue = fieldEntry.split("\\|");
+                String entryValue = splitValue[splitValue.length - 1].trim();
 
                 if (entryValue.equals(value) || value.contains(entryValue)) {
                     return value;
@@ -2584,7 +2737,7 @@ public class ImportUtil {
 
         if (UtilMethods.isSet(identifier)) {
             contentlets.addAll(
-                    searchByIdentifier(identifier, contentType, user));
+                    searchByIdentifierFromDB(identifier, contentType, user));
         } else if (urlValue != null && keyFields.isEmpty()) {
             // For HTMLPageAsset, we need to search by URL to math existing pages
             contentlets.addAll(searchByUrl(contentType, urlValue, siteAndFolder, language, user));
@@ -2620,21 +2773,19 @@ public class ImportUtil {
      * @throws DotSecurityException If the user does not have permission to access the requested
      *                              contentlet.
      */
-    private static List<Contentlet> searchByIdentifier(
+    private static List<Contentlet> searchByIdentifierFromDB(
             final String identifier,
             final Structure contentType,
             final User user
     ) throws DotDataException, DotSecurityException {
 
-        StringBuilder query = new StringBuilder()
-                .append("+structureName:").append(contentType.getVelocityVarName())
-                .append(" +working:true +deleted:false")
-                .append(" +identifier:").append(identifier);
+        final Contentlet contentlet = new Contentlet(Map.of(
+                IDENTIFIER_KEY, identifier,
+                STRUCTURE_INODE_KEY, contentType.getInode()
+        ));
 
-        List<ContentletSearch> contentsSearch = conAPI.searchIndex(query.toString(), 0, -1, null,
-                user, true);
-
-        if (contentsSearch == null || contentsSearch.isEmpty()) {
+        final List<Contentlet> allLanguages = conAPI.getAllLanguages(contentlet, false, user, true);
+        if (allLanguages == null || allLanguages.isEmpty()) {
             throw ImportLineException.builder()
                     .message("Content not found with identifier")
                     .code(ImportLineValidationCodes.CONTENT_NOT_FOUND.name())
@@ -2642,7 +2793,7 @@ public class ImportUtil {
                     .build();
         }
 
-        return convertSearchResults(contentsSearch, user);
+        return allLanguages.stream().map(Contentlet::new).collect(Collectors.toList());
     }
 
     /**
@@ -3058,39 +3209,31 @@ public class ImportUtil {
             final List<Permission> contentTypePermissions,
             final int wfActionIdIndex,
             final boolean preview,
+            final String siteId,
             final User user,
             final HttpServletRequest request,
             final String[] line
     ) throws DotDataException, DotSecurityException, IOException, LanguageException {
 
-        ProcessedContentResultBuilder resultBuilder = new ProcessedContentResultBuilder();
+        final ProcessedContentResultBuilder resultBuilder = new ProcessedContentResultBuilder();
 
         for (Contentlet cont : contentlets) {
 
-            //Clean up any existing workflow action
-            cont.resetActionId();
-
-            // Handle workflow action ID from file
-            if (wfActionIdIndex >= 0) {
-                String wfActionIdStr = line[wfActionIdIndex];
-                if (UtilMethods.isSet(wfActionIdStr)) {
-                    cont.setActionId(wfActionIdStr);
-                }
-            }
+            setWorkflowAction(wfActionIdIndex, line, cont);
 
             // Set site and folder
             setSiteAndFolder(user, cont, siteAndFolder);
 
             // Set field values
-            processContentFields(cont, headers, values, request, preview);
+            processContentFields(cont, headers, values, request, siteId, user, preview);
 
             // Retaining Categories when content updated with partial imports
             if (UtilMethods.isSet(cont.getIdentifier())) {
                 retainExistingCategories(cont, headers, categories, existingLanguage, user);
             }
 
-            // Validate relationships for the contentlet
-            validateRelationships(lineNumber,
+            // Validate the contentlet, it routes to the appropriate validation strategy weather or not it might have relationships
+            validateContentlet(lineNumber,
                     headers, categories, cont, csvRelationshipRecordsParentOnly,
                     csvRelationshipRecordsChildOnly, csvRelationshipRecords);
 
@@ -3121,23 +3264,39 @@ public class ImportUtil {
     }
 
     /**
-     * Validates relationships for a given contentlet based on the data in the CSV file. This method
-     * checks if there are any relationship fields defined in the headers, and if so, it processes
-     * and validates those relationships. If no relationship fields are present, it calls a separate
-     * validation method that does not include relationships.
-     *
-     * @param lineNumber                       The current line number being processed.
-     * @param headers                          A map containing field definitions from the file
-     *                                         header.
-     * @param categories                       A set of categories associated with the contentlet.
-     * @param cont                             The Contentlet object to be validated.
-     * @param csvRelationshipRecordsParentOnly Relationships where this contentlet is a parent
-     *                                         only.
-     * @param csvRelationshipRecordsChildOnly  Relationships where this contentlet is a child only.
-     * @param csvRelationshipRecords           All relationships (both parent and child).
-     * @throws DotDataException If an error occurs during relationship validation.
+     * Sets the workflow action ID for a contentlet based on the provided index and line data.
+     * @param wfActionIdIndex The index of the workflow action ID in the line data.
+     * @param line
+     * @param cont
      */
-    private static void validateRelationships(final int lineNumber,
+    private static void setWorkflowAction(int wfActionIdIndex, String[] line, Contentlet cont) {
+        //Clean up any existing workflow action
+        cont.resetActionId();
+        // Handle workflow action ID from file
+        if (wfActionIdIndex >= 0) {
+            String wfActionIdStr = line[wfActionIdIndex];
+            if (UtilMethods.isSet(wfActionIdStr)) {
+                cont.setActionId(wfActionIdStr);
+            }
+        }
+    }
+
+    /**
+     * Validates a contentlet and its fields using the appropriate validation strategy.
+     * If relationship fields are defined in the headers, a comprehensive validation is performed
+     * that includes relationship validation. Otherwise, a standard validation without
+     * relationship checks is applied.
+     *
+     * @param lineNumber The line number in the CSV file being processed
+     * @param headers Map of column positions to their corresponding field definitions
+     * @param categories Set of categories associated with this contentlet
+     * @param cont The contentlet to validate
+     * @param csvRelationshipRecordsParentOnly Map of parent-only relationships
+     * @param csvRelationshipRecordsChildOnly Map of child-only relationships
+     * @param csvRelationshipRecords Map of bidirectional relationships
+     * @throws DotDataException If validation fails or other data access issues occur
+     */
+    private static void validateContentlet(final int lineNumber,
             final Map<Integer, Field> headers,
             final Set<Category> categories,
             final Contentlet cont,
@@ -3147,53 +3306,89 @@ public class ImportUtil {
     ) throws DotDataException {
 
         //Check the new contentlet with the validator
-        final boolean skipRelationshipsValidation = headers.values().stream()
-                .noneMatch((field -> field.getFieldType()
+        final boolean hasRelationships = headers.values().stream()
+                .anyMatch((field -> field.getFieldType()
                         .equals(FieldType.RELATIONSHIP.toString())));
-
         try {
-            if (skipRelationshipsValidation) {
-                conAPI.validateContentletNoRels(cont, new ArrayList<>(categories));
-
-            } else {
+            //if we have relationships, we need to validate them
+            if (hasRelationships) {
                 ContentletRelationships contentletRelationships = loadRelationshipRecords(
                         csvRelationshipRecordsParentOnly, csvRelationshipRecordsChildOnly,
                         csvRelationshipRecords, cont);
 
                 conAPI.validateContentlet(cont, contentletRelationships,
-                        new ArrayList<>(categories));
+                        new ArrayList<>(categories), true);
+            } else {
+                //Otherwise, we call standard validation
+                conAPI.validateContentlet(cont, null, new ArrayList<>(categories), true);
             }
         } catch (DotContentletValidationException ex) {
-            final StringBuilder sb = new StringBuilder();
-            final Map<String, List<Field>> errors = ex.getNotValidFields();
-            final Set<String> keys = errors.keySet();
-            for (String key : keys) {
-                sb.append(key).append(": ");
-                List<Field> fields = errors.get(key);
-                int count = 0;
-                for (Field field : fields) {
-                    if (count > 0) {
-                        sb.append(", ");
-                    }
-                    sb.append(field.getVelocityVarName());
-                    count++;
-                }
-                sb.append("\n");
-            }
-
-            String fields = null;
-            if (sb.length() > 0) {
-                fields = sb.toString();
-            }
-
+            final String code = getErrorMappedCode(ex);
             throw ImportLineException.builder()
                     .message(ex.getMessage())
-                    .code(ImportLineValidationCodes.RELATIONSHIP_VALIDATION_ERROR.name())
+                    .code(code)
                     .lineNumber(lineNumber)
-                    .field(fields)
+                    .field(getOffendingFieldsAsString(ex))
                     .build();
         }
 
+    }
+
+    /**
+     * Extracts the error code from a DotContentletValidationException.
+     * @param ex The exception to extract the code from.
+     * @return The mapped error code as a string.
+     */
+    private static String getErrorMappedCode(final DotContentletValidationException ex) {
+        String code = ImportLineValidationCodes.UNKNOWN_ERROR.name();
+        if (null != ex.getNotValidRelationship() && !ex.getNotValidRelationship().isEmpty()) {
+            code = ImportLineValidationCodes.RELATIONSHIP_VALIDATION_ERROR.name();
+        } else if (null != ex.getNotValidFields()){
+            final Map<String, List<Field>> notValidFields = ex.getNotValidFields();
+            if(notValidFields.containsKey(DotContentletValidationException.VALIDATION_FAILED_REQUIRED)) {
+                code = ImportLineValidationCodes.REQUIRED_FIELD_MISSING.name();
+            }
+            if(notValidFields.containsKey(DotContentletValidationException.VALIDATION_FAILED_PATTERN)) {
+                code = ImportLineValidationCodes.VALIDATION_FAILED_PATTERN.name();
+            }
+            if(notValidFields.containsKey(DotContentletValidationException.VALIDATION_FAILED_UNIQUE)) {
+                code = ImportLineValidationCodes.DUPLICATE_UNIQUE_VALUE.name();
+            }
+            if(notValidFields.containsKey(DotContentletValidationException.VALIDATION_FAILED_BADTYPE)) {
+                code = ImportLineValidationCodes.INVALID_FIELD_TYPE.name();
+            }
+        }
+        return code;
+    }
+
+    /**
+     * Extracts the offending fields from a DotContentletValidationException.
+     * @param ex The exception to extract the fields from.
+     * @return A string representation of the offending fields.
+     */
+    private static String getOffendingFieldsAsString(final DotContentletValidationException ex) {
+        final StringBuilder sb = new StringBuilder();
+        final Map<String, List<Field>> errors = ex.getNotValidFields();
+        final Set<String> keys = errors.keySet();
+        for (String key : keys) {
+            sb.append(key).append(": ");
+            List<Field> fields = errors.get(key);
+            int count = 0;
+            for (Field field : fields) {
+                if (count > 0) {
+                    sb.append(", ");
+                }
+                sb.append(field.getVelocityVarName());
+                count++;
+            }
+            sb.append("\n");
+        }
+
+        String fields = null;
+        if (sb.length() > 0) {
+            fields = sb.toString();
+        }
+        return fields;
     }
 
     /**
@@ -3202,7 +3397,7 @@ public class ImportUtil {
      * @param cont    The Contentlet object to which field values will be set.
      * @param headers A map of column indices to their corresponding Field definitions.
      * @param values  A map of processed field values indexed by column.
-     * @param request The HTTP request object (may be used for additional context).
+     * @param request The HTTP request object (maybe used for additional context).
      * @param preview Boolean flag indicating whether this is a preview operation.
      */
     private static void processContentFields(
@@ -3210,6 +3405,8 @@ public class ImportUtil {
             final Map<Integer, Field> headers,
             final Map<Integer, Object> values,
             final HttpServletRequest request,
+            final String siteId,
+            final User user,
             final boolean preview
     ) throws IOException, DotSecurityException {
 
@@ -3232,7 +3429,9 @@ public class ImportUtil {
 
             try {
                 if (isBinaryField(field)) {
-                    processBinaryField(cont, field, value, request, preview);
+                    fetchAndSetBinaryField(cont, field, value, request, preview);
+                } else if (isFileField(field)) {
+                    fetchAndSetFileField(cont, field, value, request, siteId, user, preview);
                 } else {
                     conAPI.setContentletProperty(cont, field, value);
                 }
@@ -3343,14 +3542,11 @@ public class ImportUtil {
 
         cont.setLowIndexPriority(true);
 
-        final var validationResult = validateWorkflowExecution(lineNumber, wfActionId, cont, user,
-                resultBuilder);
-        if (validationResult.getLeft()) {
-            executeWorkflowAction(cont, categories, validationResult.getRight(), relationships,
-                    user);
+        final var validationResult = validateWorkflowExecution(lineNumber, wfActionId, cont, user, resultBuilder);
+        if (Boolean.TRUE.equals(validationResult.getLeft())) {
+            cont = executeWorkflowAction(cont, categories, validationResult.getRight(), relationships, user);
         } else {
-            cont = runWorkflowIfCould(user, contentTypePermissions, categories, cont,
-                    relationships);
+            cont = runWorkflowIfCould(user, contentTypePermissions, categories, cont, relationships);
         }
 
         processTagFields(cont, headers, values, siteAndFolder);
@@ -3411,19 +3607,145 @@ public class ImportUtil {
      *
      * @param value The raw value of the binary field from the CSV line.
      */
-    private static void processBinaryField(final Contentlet cont, final Field field,
+    private static void fetchAndSetBinaryField(final Contentlet cont, final Field field,
             final Object value, final HttpServletRequest request, final boolean preview)
             throws IOException, DotSecurityException {
+        // At this point if we got this far with an empty value it's because it was determined that the field is not required
+        // so no need to re-check
         if (preview) {
             File dummyFile = File.createTempFile("dummy", ".txt",
                     new File(ConfigUtils.getAssetTempPath()));
             cont.setBinary(field.getVelocityVarName(), dummyFile);
         } else if (value != null && UtilMethods.isSet(value.toString())) {
-            DotTempFile tempFile = APILocator.getTempFileAPI()
-                    .createTempFileFromUrl(null, request, new URL(value.toString()), -1);
+            final URL url = URI.create(value.toString()).toURL();
+            final DotTempFile tempFile = tempFileAPI
+                    .createTempFileFromUrl(null, request, url, -1);
             cont.setBinary(field.getVelocityVarName(), tempFile.file);
         }
     }
+
+    /**
+     * Fetches and sets an image field in the contentlet.
+     * @param cont Contentlet with processed field values
+     * @param field Field to check
+     * @param value Value to set for the image field
+     * @param request HTTP request object, used for context
+     * @param preview Boolean flag indicating if this is a preview operation
+     */
+    private static void fetchAndSetFileField(final Contentlet cont, final Field field,
+            final Object value, final HttpServletRequest request, final String siteId, final User user, final boolean preview) {
+        // At this point if we got this far with an empty value it's because it was determined that the field is not required So No need to re-check
+        // But we check if its set and not empty, so we don't try to process empty values.
+        // Otherwise, we might end-up throwing an exception for a non-required field
+        if (value != null && UtilMethods.isSet(value.toString())) {
+            final String uriOrIdentifier = value.toString();
+            // First we need to determine if we're looking at an internal Path or an external URL
+            // if we're looking at an url we attempt a fetch
+            if (UtilMethods.isValidStrictURL(uriOrIdentifier)) {
+                try {
+                    final Host currentHost = Host.SYSTEM_HOST.equals(siteId) ?
+                            hostAPI.findDefaultHost(APILocator.systemUser(),false) :
+                            hostAPI.find(siteId, APILocator.systemUser(), false);
+                    final ContentType contentType = contentTypeAPI.find(
+                            FileAssetAPI.DEFAULT_FILE_ASSET_STRUCTURE_VELOCITY_VAR_NAME);
+                    final URI uri = URI.create(uriOrIdentifier);
+
+                    // Create a file asset from the temporary file or retrieve the existing one
+                    final Contentlet fileAsset = getFileAsset(uri, request, contentType, currentHost, user);
+
+                    // Set the image field in the contentlet to the identifier of the file asset
+                    // That's how image fields are constructed
+                    cont.setProperty(field.getVelocityVarName(), fileAsset.getIdentifier());
+
+                } catch (Exception e) {
+                    Logger.error(ImportUtil.class, "Error setting image field", e);
+                    throw ImportLineException.builder()
+                            .message("Error processing file asset from URL: " + uriOrIdentifier + " under site: " + siteId)
+                            .code(ImportLineValidationCodes.INVALID_LOCATION.name())
+                            .invalidValue(uriOrIdentifier)
+                            .build();
+                }
+            } else {
+                cont.setProperty(field.getVelocityVarName(), uriOrIdentifier);
+            }
+        }
+    }
+
+    /**
+     * Retrieves or creates a file asset from a given URI.
+     * @param uri The URI of the file to be processed.
+     * @param request The HTTP request object, used to fetch the file.
+     * @param contentType The content type for the file asset, used to define its structure.
+     * @param site The default host where the file asset will be stored.
+     * @return A Contentlet object representing the file asset, either retrieved or created.
+     * @throws DotDataException If there is a data-related exception during the process.
+     * @throws DotSecurityException If the user does not have permission to access the requested
+     * @throws IOException If an I/O error occurs while fetching the file.
+     */
+    private static Contentlet getFileAsset(final URI uri, HttpServletRequest request, final ContentType contentType,
+            final Host site, final User user)
+            throws DotDataException, DotSecurityException, IOException {
+        final long langId = langAPI.getDefaultLanguage().getId();
+
+        final String fileName = UtilMethods.fileName(uri);
+
+        // Use filename + host as key since we're checking for filename existence on that host
+        final String fileKey = fileName + ":" + site.getIdentifier();
+        final ReentrantLock reentrantLock = fileLocks.computeIfAbsent(fileKey, k -> new ReentrantLock());
+
+        reentrantLock.lock();
+        try {
+            final Folder root = folderAPI.findFolderByPath(FORWARD_SLASH,
+                    site, APILocator.systemUser(), false);
+
+            final boolean exists = fileAssetAPI.fileNameExists(site, root, fileName);
+            if (exists) {
+                //Check if user has permission to access the file
+                final FileAsset file = fileAssetAPI.getFileByPath(FORWARD_SLASH + fileName,
+                        site, langId, false);
+                if (!permissionAPI.doesUserHavePermission(file, PermissionAPI.PERMISSION_READ, user)) {
+                    throw new DotSecurityException("User does not have permission to read the existing file: " + fileName);
+                }
+                return file;
+            }
+            // if we determine that the file does not exist, we proceed to fetch it
+            final DotTempFile tempFile = APILocator.getTempFileAPI().createTempFileFromUrl(null, request, uri.toURL(), -1);
+            final File file = tempFile.file;
+
+            // And create a new file asset from the temporary file we fetched
+            final Contentlet fileAsset = new Contentlet();
+            fileAsset.setContentType(contentType);
+            fileAsset.setLanguageId(langId);
+            fileAsset.setHost(site.getIdentifier());
+            fileAsset.setFolder(root.getInode());
+            fileAsset.setProperty(FileAssetAPI.TITLE_FIELD, file.getName());
+            fileAsset.setProperty(FileAssetAPI.FILE_NAME_FIELD, file.getName());
+            fileAsset.setProperty(FileAssetAPI.BINARY_FIELD, file);
+
+            final Contentlet savedFileAsset = conAPI.checkin(fileAsset, user, false);
+            conAPI.publish(savedFileAsset, user, false);
+
+            return savedFileAsset;
+
+        } finally {
+            reentrantLock.unlock();
+            // Cleanup if no threads are waiting
+            if (!reentrantLock.hasQueuedThreads()) {
+                fileLocks.remove(fileKey, reentrantLock);
+            }
+        }
+    }
+
+    private static final ConcurrentHashMap<String, ReentrantLock> fileLocks = new ConcurrentHashMap<>();
+
+    /**
+     * Creates a Contentlet object representing a file asset from the provided temporary file.
+     * @param tempFile The temporary file containing the uploaded file data.
+     * @param contentType The content type for the file asset, used to define its structure.
+     * @param defaultHost The default host where the file asset will be stored.
+     * @return A Contentlet object representing the file asset, populated with necessary properties.
+     */
+
 
     /**
      * Retrieves all category-related fields from the specified content structure based on its
@@ -3633,7 +3955,7 @@ public class ImportUtil {
      * @throws DotDataException     If an error occurs during workflow execution or processing.
      * @throws DotSecurityException If a security-related exception occurs during execution.
      */
-    private static void executeWorkflowAction(
+    private static Contentlet executeWorkflowAction(
             final Contentlet cont,
             final List<Category> categories,
             final WorkflowAction executeWfAction,
@@ -3645,17 +3967,17 @@ public class ImportUtil {
         cont.setBoolProperty(Contentlet.SKIP_RELATIONSHIPS_VALIDATION,
                 relationships == null || relationships.getRelationshipsRecords().isEmpty());
 
-        workflowAPI.fireContentWorkflow(cont,
-                new ContentletDependencies.Builder()
-                        .respectAnonymousPermissions(Boolean.FALSE)
-                        .modUser(user)
-                        .relationships(relationships)
-                        .workflowActionId(executeWfAction.getId())
-                        .workflowActionComments("")
-                        .workflowAssignKey("")
-                        .categories(categories)
-                        .generateSystemEvent(Boolean.FALSE)
-                        .build());
+        return workflowAPI.fireContentWorkflow(cont,
+                    new ContentletDependencies.Builder()
+                            .respectAnonymousPermissions(Boolean.FALSE)
+                            .modUser(user)
+                            .relationships(relationships)
+                            .workflowActionId(executeWfAction.getId())
+                            .workflowActionComments("")
+                            .workflowAssignKey("")
+                            .categories(categories)
+                            .generateSystemEvent(Boolean.FALSE)
+                            .build());
     }
 
     /**
@@ -4718,9 +5040,14 @@ public class ImportUtil {
         }
 
         public void addWarning(final String message, final String code) {
+            addWarning(message, code, "N/A");
+        }
+
+        public void addWarning(final String message, final String code, final String field) {
             addValidationMessage(ValidationMessage.builder()
                     .type(ValidationMessageType.WARNING)
                     .message(message)
+                    .field(field)
                     .code(code)
                     .lineNumber(lineNumber)
                     .build());
